# NovaLink-VPN

./: .gitignore  .sonar-project.properties  CMakeLists.txt  LICENSE  README.md  structura
.github/workflows/: ci.yml
apps/client/: CMakeLists.txt  main.cpp
apps/server/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/crypto/: CryptoEngine.cpp  CryptoEngine.hpp
core/network/: EpollEngine.cpp  EpollEngine.hpp  NetAddress.hpp  Protocol.hpp  SslLayer.cpp  SslLayer.hpp  UdpSocket.cpp  UdpSocket.hpp
core/tunnel/: TunDevice.cpp  TunDevice.hpp
